--- a/css/HCJS.css
+++ b/css/HCJS.css
@@ -1,63 +1,70 @@
-.main {
-    background: #5098d5;
-    color: white;
-    padding: 50px 0;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
-
-.main .ttl {
+body{
+    background-color: #fafafa;
+    color: #242424;
+    font-size: 14px;
+    line-height: 1.25;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;/* font backup */
+    text-align: left;
+}
+section{
+    background-color: #3498db;
+}
+.container{
+    width: 800px;
+    margin-right: auto;
+    margin-left: auto;
+    float: none;
+}
+.container h1{
+    color: #ffffff;
+    font-size: 60px;
     margin-bottom: 50px;
 }
-
-.main-box {
-    background: white;
-    padding: 50px;
-    max-width: 820px;
-    margin: 0 auto;
-    color: gray;
-}
-
-.main-box > * {
+.item{
+    background-color: #ffffff;
     width: 100%;
 }
-
-.tabs-head {
-    margin-bottom: 20px;
+.item-box{
+    padding: 70px;
+    width: 100%;
 }
-
-.tabs-head > * {
-    background: gray;
-    color: white;
-    padding: 10px;
-    margin: 0 10px 2px 0;
-    cursor: pointer;
-}
-
-.tabs-head > *.active {
-    background: #5098d5;
-}
-
-.tabs-cnt > * {
-    display: none;
-}
-
-.tabs-cnt > *.active {
-    display: block;
-}
-
-.tabs-cnt > * form > * {
-    margin-bottom: 20px;
-}
-
-.tabs-cnt > * form > *:last-child {
-    margin-bottom: 0;
-}
-
-.tabs-cnt > * form .gender > * {
+.item-box button{
+    font-size: 40px;
+    color: #ffffff;
+    background-color: #cccccc;
     margin-right: 20px;
+    margin-bottom: 5px;
 }
-
-.tabs-cnt > * form textarea {
-    height: 200px;
+#bt1 {
+    background-color: #2096cd;
 }
-
-/*# sourceMappingURL=maps/styles.css.map */
+span{
+    margin: 20px;
+}
+.form-control{
+    width: 100%;
+    height: 60px;
+    margin-top: 50px;
+    border: 3px solid #e0e0e0;
+    color: #929395;
+    font-size: 20px;
+    padding: 15px;
+}
+.lb{
+    margin-top: 50px;
+    font-size: 25px;
+    color: #929395;
+}
+.lb input{
+    margin-left: 10px;
+}
+.bt button{
+    margin-top: 50px;
+    background-color: #2096cd;
+}
